# hawk-tui

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
docs/: prd.md  tmux.md
docs/issues/: 001-scaffold-hawk-tracer-bullet.md  002-discover-repos-and-workspaces.md  003-load-tracked-and-untracked-diffs.md  004-render-navigable-unified-diff-tui.md  005-add-autosaved-inline-comments.md  006-export-comments-as-ai-prompt.md  007-add-sidebar-comment-list-progress.md  008-reload-and-reconcile-comments.md  009-add-syntax-and-intraline-highlighting.md  010-skip-non-text-and-lazy-load-huge-diffs.md  011-config-cli-modes-and-tmux-docs.md  012-harden-mvp-with-e2e-tests.md  013-introduce-review-document-module.md  014-add-git-adapter-module.md  015-deepen-diff-loading-module.md  016-introduce-session-store-module.md  017-extract-prompt-export-pipeline-module.md  018-extract-tui-command-handling-module.md  019-add-architecture-regression-tests.md  index.md
src/: clipboard.rs  commands.rs  config.rs  diff.rs  diff_loader.rs  document.rs  engine.rs  export.rs  git.rs  highlight.rs  lib.rs  main.rs  prompt.rs  session.rs  session_store.rs  text.rs  tui.rs  workspace.rs
src-ts/: cli.ts  opentui.ts
src-ts/core/: clipboard.ts  core.test.ts  diff.ts  document.ts  e2e.test.ts  engine.ts  git.ts  loader.ts  model.ts  prompt.ts  session.ts  workspace.ts
src-ts/ui/: clipboard.test.ts  clipboard.ts  state.ts  ui.test.ts  view.ts
tests/: e2e.rs
