[package]
name = "hawk-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hawk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
